# mind-piano

./: .gitignore  README.md  install.py  mind-piano.desktop  pyproject.toml
mind_piano/: config.py  looper.py  main.py  tray.py  view_state.py
mind_piano/views/: MainWindow.qml
